added one more chapter, new graphics, code cleanups

--- a/gravitekk_codegen/gravitekk_codegen/gravitekk_codegen.csproj
+++ b/gravitekk_codegen/gravitekk_codegen/gravitekk_codegen.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Headers.cs" />
     <Compile Include="IParser.cs" />
     <Compile Include="Parsers\BgChangeParser.cs" />
+    <Compile Include="Parsers\BgScrollParser.cs" />
     <Compile Include="Parsers\CharacterDialogueParser.cs" />
     <Compile Include="Parsers\CharacterMoveLeftParser.cs" />
     <Compile Include="Parsers\CreateCharacterParser.cs" />
